--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "proxy": "http://localhost:8888",
+  "proxy": "https://inspiring-cucurucho-ef93e7.netlify.app",
   "description": "",
   "main": "server.js",
   "scripts": {
