--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,5 +1,6 @@
 {
   "name": "loan-approval-screen",
+  "proxy": "http://localhost:8888",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
